--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -19139,7 +19139,7 @@
       </notes>
       <segment>
         <source>Reiseleiter-Ratgeber</source>
-        <target>guide du jeu pour les Duides de l'Outre-Monde</target>
+        <target>guide du jeu pour les Guides de l'Outre-Monde</target>
       </segment>
     </unit>
     <unit id="9ahpfaF" name="Alle als gelesen markieren">
